scrollbar fix + paragraph formating

--- a/css/default.scss
+++ b/css/default.scss
@@ -52,7 +52,7 @@
 }
 
 html {
-    scrollbar-gutter: stable both-edges;
+    scrollbar-gutter: stable;
     scrollbar-color: var(--primary) var(--surface-2);
     scrollbar-width: auto;
     overflow-x: hidden;
